--- a/.github/workflows/dev_cron.yml
+++ b/.github/workflows/dev_cron.yml
@@ -31,9 +31,9 @@ jobs:
     name: issues link
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@master-5
       - name: Comment
-        uses: actions/github-script@master
+        uses: actions/github-script@master-5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -47,9 +47,9 @@ jobs:
     name: Title check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@master-5
       - name: Check
-        uses: actions/github-script@master
+        uses: actions/github-script@master-5
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
